--- a/HuongProject/HuongProject.csproj
+++ b/HuongProject/HuongProject.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,5 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="29.0.0" />
+    <PackageReference Include="Selenium.Support" Version="4.5.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.5.0" />
+  </ItemGroup>
 
 </Project>
